// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable component tests Should render DataTable correctly 1`] = `
<div>
  <table
    aria-label="Data Table"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-2"
    data-ouia-component-type="data-table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-1"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <th
          class=""
          data-key="0"
          data-label="ProcessId"
          scope="col"
        >
          ProcessId
        </th>
        <th
          aria-sort="none"
          class="pf-c-table__sort"
          data-key="1"
          data-label="Name"
          scope="col"
        >
          <button
            class="pf-c-table__button"
            type="button"
          >
            <div
              class="pf-c-table__button-content"
            >
              <span
                class="pf-c-table__text"
              >
                Name
              </span>
              <span
                class="pf-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
        <th
          class=""
          data-key="2"
          data-label="Priority"
          scope="col"
        >
          Priority
        </th>
        <th
          class=""
          data-key="3"
          data-label="ProcessInstanceId"
          scope="col"
        >
          ProcessInstanceId
        </th>
        <th
          aria-sort="none"
          class="pf-c-table__sort"
          data-key="4"
          data-label="State"
          scope="col"
        >
          <button
            class="pf-c-table__button"
            type="button"
          >
            <div
              class="pf-c-table__button-content"
            >
              <span
                class="pf-c-table__text"
              >
                State
              </span>
              <span
                class="pf-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class=""
      role="rowgroup"
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-2"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-key="0"
          data-label="ProcessId"
        >
          travels
        </td>
        <td
          class=""
          data-key="1"
          data-label="Name"
        >
          VisaApplication
        </td>
        <td
          class=""
          data-key="2"
          data-label="Priority"
        >
          1
        </td>
        <td
          class=""
          data-key="3"
          data-label="ProcessInstanceId"
        >
          9ae7ce3b-d49c-4f35-b843-8ac3d22fa427
        </td>
        <td
          class=""
          data-key="4"
          data-label="State"
        >
          <span
            class="pf-c-label"
          >
            <span
              class="pf-c-label__content"
            >
              Ready
            </span>
          </span>
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-3"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-key="0"
          data-label="ProcessId"
        >
          travels
        </td>
        <td
          class=""
          data-key="1"
          data-label="Name"
        >
          ConfirmTravel
        </td>
        <td
          class=""
          data-key="2"
          data-label="Priority"
        >
          1
        </td>
        <td
          class=""
          data-key="3"
          data-label="ProcessInstanceId"
        >
          9ae407dd-cdfa-4722-8a49-0a6d2e14550d
        </td>
        <td
          class=""
          data-key="4"
          data-label="State"
        >
          <span
            class="pf-c-label"
          >
            <span
              class="pf-c-label__content"
            >
              Ready
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable component tests Should render ErrorComponent 1`] = `
<div>
  <div
    class=".pf-u-my-xl"
  >
    <div
      class="pf-l-bullseye"
      data-ouia-component-type="kogito-empty-state"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-empty-state"
      >
        <div
          class="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            class="pf-c-empty-state__icon"
            fill="var(--pf-global--warning-color--100)"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
          <h5
            class="pf-c-title pf-m-lg"
            data-ouia-component-id="OUIA-Generated-Title-1"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Oops... error while loading
          </h5>
          <div
            class="pf-c-empty-state__body"
          >
            Try using the refresh action to reload
          </div>
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Refresh
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataTable component tests Should render LoadingComponent 1`] = `
<div>
  <table
    aria-label="Data Table"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-4"
    data-ouia-component-type="data-table"
    data-ouia-safe="false"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-4"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <th
          class=""
          data-key="0"
          data-label="ProcessId"
          scope="col"
        >
          ProcessId
        </th>
        <th
          class=""
          data-key="1"
          data-label="Name"
          scope="col"
        >
          Name
        </th>
        <th
          class=""
          data-key="2"
          data-label="Priority"
          scope="col"
        >
          Priority
        </th>
        <th
          class=""
          data-key="3"
          data-label="ProcessInstanceId"
          scope="col"
        >
          ProcessInstanceId
        </th>
        <th
          class=""
          data-key="4"
          data-label="State"
          scope="col"
        >
          State
        </th>
      </tr>
    </thead>
    <tbody
      class=""
      role="rowgroup"
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-5"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          colspan="5"
          data-key="0"
          data-label="ProcessId"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              class="pf-c-empty-state"
              data-ouia-component-type="kogito-spinner"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-empty-state__content"
              >
                <div
                  class="pf-c-empty-state__icon"
                >
                  <span
                    aria-label="Contents"
                    aria-valuetext="Loading..."
                    class="pf-c-spinner pf-m-xl"
                    role="progressbar"
                  >
                    <span
                      class="pf-c-spinner__clipper"
                    />
                    <span
                      class="pf-c-spinner__lead-ball"
                    />
                    <span
                      class="pf-c-spinner__tail-ball"
                    />
                  </span>
                </div>
                <h3
                  class="pf-c-title pf-m-lg"
                  data-ouia-component-id="OUIA-Generated-Title-2"
                  data-ouia-component-type="PF4/Title"
                  data-ouia-safe="true"
                >
                  Loading ...
                </h3>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
